# supervisor

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .ha-frontend-version  .hadolint.yaml  .lokalise_token  .pre-commit-config.yaml  .travis.yml  .vcnignore  API.md  Dockerfile  LICENSE  MANIFEST.in  README-kube.md  README.md  azure-pipelines-ci.yml  azure-pipelines-release.yml  azure-pipelines-wheels.yml  azure-pipelines.yml  build.json  build.yaml  codecov.yaml  entry.sh  ha-k8s-supervised.yaml  k8s.md  pylintrc  pyproject.toml  pytest.ini  requirements.txt  requirements_tests.txt  setup.cfg  setup.py  tox.ini  version.json  version_beta.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  label-actions.yml  main.workflow  release-drafter.yml  stale.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  bug_report.yml  config.yml  task.yml  z_bug_report_form.yml
.github/workflows/: Zd_Update.yaml  builder-ZG.yaml  builder-ZG.yml  builder.yml  builder_ZG.yml  check_pr_labels.yml  ci.yaml  label-actions.yml  lock.yml  release-drafter.yml  restrict-task-creation.yml  run.yml  sentry.yaml  stale.yml  update_frontend.yml  wheels.yml
build-scripts/: README.md
build-scripts/docker-build-env/: Dockerfile  create_build_env.sh  run-docker.sh
build-scripts/hassio-supervisor/: create_all.sh  create_hassio_supervisor.sh
build-scripts/homeassistant/: create_homeassistant.sh
build-scripts/resinhup-build/: create_resinhup.sh
build-scripts/resinos-build/: README.md  create_resinos.sh
build-scripts/yocto-build-env/: Dockerfile  create-build-env.sh  create_build_env.sh  run-resinos.sh
hassio/: __main__.py  arch.json  arch.py  auth.py  bootstrap.py  config.py  const.py  core.py  coresys.py  discovery.py  dns.py  exceptions.py  hardware.py  hassos.py  homeassistant.py  host_control.py  host_controll.py  ingress.py  scheduler.py  secrets.py  supervisor.py  tasks.py  tools.py  updater.py  validate.py
hassio/addons/: __init__.py  addon.py  build.py  built-in.json  config.py  data.py  git.py  model.py  repository.py  util.py  utils.py  validate.py
hassio/api/: __init__.py  addons.py  auth.py  cluster.py  cluster_addons.py  cluster_management.py  cluster_proxy.py  discovery.py  dns.py  hardware.py  hassos.py  homeassistant.py  host.py  info.py  ingress.py  network.py  proxy.py  secrets.py  security.py  services.py  snapshots.py  supervisor.py  util.py  utils.py  version.py
hassio/cluster/: __init__.py  data.py  node.py  util.py  util_rest.py  validate.py
hassio/data/: arch.json  coredns.tmpl  hosts  hosts.tmpl
hassio/dbus/: __init__.py  hostname.py  interface.py  nmi_dns.py  rauc.py  systemd.py  utils.py
hassio/discovery/: __init__.py  const.py  validate.py
hassio/dock/: __init__.py  addon.py  cluster.py  homeassistant.py  interface.py  network.py  supervisor.py  util.py
hassio/docker/: __init__.py  addon.py  dns.py  hassos_cli.py  homeassistant.py  interface.py  network.py  stats.py  supervisor.py  utils.py
hassio/host/: __init__.py  alsa.py  apparmor.py  asound.tmpl  audio.py  audiodb.json  control.py  info.py  local.py  network.py  power.py  service.py  services.py  system.py
hassio/misc/: __init__.py  dns.py  forwarder.py  gdbus.py  hardware.py  host_control.py  scheduler.py  systemd.py
hassio/panel/: hassio-main-es5.html  hassio-main-latest.html  hassio-main.html
hassio/services/: __init__.py  const.py  data.py  discovery.py  interface.py  mqtt.py  validate.py
hassio/snapshot/: __init__.py
hassio/snapshots/: __init__.py  snapshot.py  util.py  utils.py  validate.py
hassio/store/: __init__.py  addon.py  data.py  git.py  repository.py  utils.py  validate.py
hassio/utils/: __init__.py  apparmor.py  datetime.py  dt.py  gdbus.py  json.py  tar.py  validate.py
hassio_api/: README.md  setup.py  tox.ini
hassio_api/.pylint.d/: hassio1.stats
hassio_api/hassio/: __init__.py  __main__.py  bootstrap.py  config.py  const.py  core.py  host_controll.py  scheduler.py  tools.py  version.py
homeassistant/: Dockerfile
meta-hassio/classes/: resin-connectable-service.bbclass
meta-hassio/conf/: layer.conf
misc/: hassio.xml  security.xml
rootfs/root/: .cas-trusted-signing-pub-key
script/: docker_dev.sh  run-in-env.sh  test_env.sh  update-frontend.sh
scripts/: build-supervisor.sh  common.sh  dbus-system.conf  dev_version.sh  run-supervisor.sh  supervisor.sh  test_env.sh  update-frontend.sh
supervisor/: Dockerfile  README.md  __init__.py  __main__.py  arch.py  audio.py  auth.py  bootstrap.py  bus.py  cli.py  config.py  const.py  core.py  coresys.py  dns.py  exceptions.py  hassos.py  homeassistant.py  hwmon.py  ingress.py  secrets.py  security.py  supervisor.py  tasks.py  updater.py  validate.py
supervisor/addons/: __init__.py  addon.py  build.py  configuration.py  const.py  data.py  manager.py  model.py  options.py  utils.py  validate.py
supervisor/api/: __init__.py  addons.py  apps.py  audio.py  auth.py  backups.py  cli.py  const.py  deprecation.py  discovery.py  dns.py  docker.py  hardware.py  hassos.py  homeassistant.py  host.py  info.py  ingress.py  jobs.py  middleware_security.py  mounts.py  multicast.py  network.py  observer.py  os.py  proxy.py  resolution.py  root.py  security.py  services.py  snapshots.py  storage.py  store.py  supervisor.py  utils.py
supervisor/apps/: __init__.py  app.py  build.py  configuration.py  const.py  data.py  manager.py  model.py  options.py  utils.py  validate.py
supervisor/backups/: __init__.py  backup.py  const.py  manager.py  utils.py  validate.py
supervisor/core/: __init__.py  internet.py
supervisor/data/: arch.json  asound.tmpl  audiodb.json  coredns.tmpl  hosts.tmpl  pulse-client.tmpl  resolv.tmpl  syslog-identifiers.json
supervisor/dbus/: const.py  (+14 more)
tests/: __init__.py  common.py  conftest.py  const.py  test_arch.py  test_auth.py  test_bus.py  test_core.py  test_core_state.py  test_coresys.py  test_hassos.py  test_ingress.py  test_main.py  test_security.py  test_supervisor.py  test_updater.py  test_validate.py
(+31122 files in other folders)
